# PrincetonRaceCar_planning

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
cfg/: planner.cfg
configs/: config.yaml  ilqr.yaml  ilqr_avodiance.yaml  lab1.yaml  lab2.yaml  lab2_static.yaml  lab2_task2.yaml  mlp_model.sav  task1.yaml
ilqr_planning_ros/: .gitignore  CMakeLists.txt  package.xml  setup.py  test.ipynb
ilqr_planning_ros/configs/: config.yaml  ilqr.yaml
ilqr_planning_ros/launch/: ilqr_planning.launch  test.launch
ilqr_planning_ros/scripts/: planning.py  traj_planning_node.py
ilqr_planning_ros/scripts/iLQR/: __init__.py
ilqr_planning_ros/scripts/planner/: planner.py  policy.py  profile.ipynb  test_hpp_fcl.ipynb  test_ilqr.ipynb
ilqr_planning_ros/scripts/planner/iLQR/: __init__.py  config.py  ilqr.py  ilqr_old.py  path.py  policy.py
ilqr_planning_ros/scripts/planner/iLQR/cost/: __init__.py  base_cost.py  control_cost.py  cost.py  lateral_accel_cost.py  obstacle_cost.py  state_cost.py
ilqr_planning_ros/scripts/planner/iLQR/cost/collision_checker/: __init__.py  collision_checker.py  obstacle.py
ilqr_planning_ros/scripts/planner/iLQR/dynamics/: __init__.py  bicycle5d.py
ilqr_planning_ros/scripts/planner/utils/: __init__.py  policy.py  ros_utility.py
ilqr_planning_ros/scripts/utils/: realtime_buffer.py  ros_utility.py
launch/: ilqr_planning.launch  ilqr_simulation.launch  ilqr_truck.launch  lab2.launch  lab2_static.launch  lab2_task1.launch  lab2_task2.launch  lab2_truck.launch
scripts/: task1.ipynb  traj_planner.py  traj_planning_node.py
(+47 files in other folders)
